service.yaml
apiVersion: v1
kind: Service
metadata:
  name: papely-service
spec:
  type: ClusterIP
  selector:
    app: papely
  ports:
    - port: 80
      targetPort: 80
