ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: papely-ingress
  namespace: papely-qrcode
spec:
  rules:
    - host: papely.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: papely-service
                port:
                  number: 80
